# RNG-App

./: .gitignore  README.md
.github/workflows/: publish.yml
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
svelte-app/: gen_icon.ps1  index.html  package-lock.json  package.json  svelte.config.mjs  vite.config.mjs
svelte-app/src/: App.svelte  app.html  main.js
svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
svelte-app/src-tauri/capabilities/: default.json
svelte-app/src-tauri/src/: main.rs
svelte-app/src/assets/: Add.m4a  BatchOutput.m4a  ButtonGeneric.m4a  Clear.m4a  Dock.m4a  DragPickUp.m4a  DragPutDown.m4a  EditItem.m4a  Load.m4a  Notification.m4a  OutOfInputs.m4a  Remove.m4a  Save.m4a  SelectedItem.m4a  SettingsClose.m4a  SettingsOpen.m4a  SingleOutput.m4a  UnSelectedItem.m4a  Undock.m4a  VolumeChange.m4a
svelte-app/src/lib/: particles.js  styles.css  tauri-client.js
