[package]
name = "rng-app"
version = "1.0.0"
description = "Random number/value generator app"
authors = [""]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rng_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rng-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.0.0-beta" }
